--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                         <h2>5. Een branch rebasen</h2>
                         <p>
                             Status:
+                            <span id="status">Flex</span>
                             <span id="status">Strong</span>
                         </p>
                     </div>
